0.2 2021-02-12
        - Convert also KorAP-XML base zips

0.1 2020-09-23
        - Initial release to GitHub.