@@ -1,3 +1,5 @@
+        - Provide conllu2korapxml to convert from ConLL-U to KorAP-XML zip
+
 0.2 2021-02-12
         - Convert also KorAP-XML base zips
 
